show top 5 predictions, add numpy arn

--- a/textDetectModel/tutorial_towardsdatascience.ipynb
+++ b/textDetectModel/tutorial_towardsdatascience.ipynb
@@ -590,7 +590,7 @@
     "                      f\"Test accuracy: {accuracy/len(testloader):.3f}\")\n",
     "                running_loss = 0\n",
     "                model.train()\n",
-    "    torch.save(model, 'models/tds_model.pth')\n",
+    "    torch.save(model, 'models/tds_model.pt')\n",
     "    return train_losses, test_losses\n",
     "    \n",
     "train_losses, test_losses = train_model(True)\n",
@@ -856,7 +856,7 @@
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model=torch.load('models/tds_model.pth')\n",
+    "model=torch.load('models/tds_model.pt')\n",
     "model.eval()"
    ]
   },
@@ -980,9 +980,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bita46fd814d558463baa988311c2514a7b"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
